tests/errors/null_deref.solar
fn main() {
  let z: &?Int = null#[Int];
  print_int(z@);
}
